samples/_failures_safe/1761072559_caa6a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f486d120.c: In function ‘calculate_mesh_volume’:
./samples/SAFE/__tmp_f486d120.c:135:5: error: expected expression at end of input
  135 |     double total_volume =
      |     ^~~~~~
./samples/SAFE/__tmp_f486d120.c:135:5: error: expected declaration or statement at end of input
